Make incremental reflow of fixed-position tables happier.  Bug 94009, r=dbaron, sr=attinasi